# The-Agent-AI-Architect

./: .env.template  .gitignore  CLAUDE.md  README.md  agent-ai-architect.code-workspace  agentic-ai-coding-system-design.md  check_env.py  requirements.txt  setup.sh  test_env.py
agentic-coder/: .env.example  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
agentic-coder/.github/: PULL_REQUEST_TEMPLATE.md
agentic-coder/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agentic-coder/.github/workflows/: ci.yml
agentic-coder/config/: default.yaml  development.yaml  models.yaml  production.yaml  tools.yaml
agentic-coder/docker/: Dockerfile  Dockerfile.gpu
agentic-coder/docs/: README.md
agentic-coder/docs/architecture/: system-overview.md
agentic-coder/docs/development/: contributing.md
agentic-coder/docs/guides/: installation.md  quick-start.md
agentic-coder/examples/simple_agent/: README.md  agent.py
agentic-coder/scripts/: dev_setup.sh  download_models.py  init_databases.py
agentic-coder/src/agentic_coder/: __init__.py  __main__.py  config.py  constants.py  exceptions.py
agentic-coder/src/agentic_coder/agents/: __init__.py
agentic-coder/src/agentic_coder/agents/analyzer/: __init__.py  analyzer_agent.py
agentic-coder/src/agentic_coder/agents/base/: __init__.py  agent.py  cognitive_agent.py  modular_agent.py
agentic-coder/src/agentic_coder/agents/coder/: __init__.py  coder_agent.py
agentic-coder/src/agentic_coder/agents/orchestrator/: __init__.py  orchestrator_agent.py
agentic-coder/src/agentic_coder/agents/planner/: __init__.py  planner_agent.py
agentic-coder/src/agentic_coder/cognitive/: __init__.py
agentic-coder/src/agentic_coder/knowledge/: __init__.py
agentic-coder/src/agentic_coder/tools/: __init__.py
agentic-coder/src/agentic_coder/ui/: __init__.py
agentic-coder/src/agentic_coder/utils/: __init__.py
agentic-coder/src/agentic_coder/workflows/: __init__.py
agentic-coder/tests/: __init__.py  conftest.py
agentic-coder/tests/integration/: test_agent_coordination.py
(+145 files in other folders)
